Fix stdout height issue on firefox
 #2028

--- a/awx/ui/client/src/standard-out/standard-out.block.less
+++ b/awx/ui/client/src/standard-out/standard-out.block.less
@@ -40,7 +40,7 @@ standard-out-log {
     }
 
     .StandardOut-consoleOutput {
-        height: auto;
+        height: 493px;
     }
 }
 
